[project]
name = "parallax-syn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "deepeval>=3.7.2",
    "fastapi>=0.121.3",
    "gradio>=5.49.1",
    "huggingface-hub[cli]>=1.1.5",
    "langgraph>=1.0.3",
    "langsmith>=0.4.45",
    "parallax",
    "pydantic>=2.11.10",
    "python-dotenv>=1.2.1",
    "sgl-kernel>=0.3.17",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
parallax = { git = "https://github.com/GradientHQ/parallax.git" }
